# app/src/components/App.js
@@ -7,6 +7,7 @@ import Dashboard from './Dashboard';
 import AddItem from './AddItem';
 import PrivateRoute from './PrivateRoute';
 import BooksReadByOthers from '../containers/BooksByOthers';
+import BookView from '../containers/BookView';
 import BooksHistory from '../containers/history/Books';
 import BookViewHistory from '../containers/history/BookView';
 import BookEditHistory from '../containers/history/BookEdit';
@@ -45,6 +46,7 @@ const App = (props) => {
                       onMenuChange={onMenuChange}
                       onBtnClick={redirect} />
         <PrivateRoute path='/add' component={AddItem} isAuthenticated={isAuthenticated}/>
+        <PrivateRoute path='/books/:id' component={BookView} isAuthenticated={isAuthenticated}/>
         <PrivateRoute path='/books' component={BooksReadByOthers} isAuthenticated={isAuthenticated}/>
         <PrivateRoute path='/history/books/:id/edit' component={BookEditHistory} isAuthenticated={isAuthenticated}/>
         <PrivateRoute path='/history/books/:id' component={BookViewHistory} isAuthenticated={isAuthenticated}/>
